[gd_scene load_steps=5 format=3 uid="uid://tws1k11uojqk"]

[ext_resource type="Script" uid="uid://bk26m52eaw20m" path="res://scripts/gui.gd" id="1_efmwq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efmwq"]
bg_color = Color(0.1, 0.1, 0.1, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mfius"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_ynd5l"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_efmwq")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_mfius")

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_efmwq")

[node name="Bars" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 184.0
offset_bottom = 28.0

[node name="HealthBar" type="ProgressBar" parent="Bars"]
modulate = Color(1, 0.27, 0.27, 1)
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_ynd5l")
value = 50.0
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="Bars"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_ynd5l")
value = 50.0
show_percentage = false

[node name="Stats" type="VBoxContainer" parent="Bars"]
visible = false
layout_mode = 2

[node name="MaxHealth" type="Label" parent="Bars/Stats"]
layout_mode = 2
text = "Maximum Health: 0"

[node name="MaxStam" type="Label" parent="Bars/Stats"]
layout_mode = 2
text = "Maximum Stamina: 0"

[node name="Damage" type="Label" parent="Bars/Stats"]
layout_mode = 2
text = "Damage: 0"

[node name="PauseMenu" type="VBoxContainer" parent="."]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -68.0
offset_right = 94.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="PauseMenu"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../LoadLastSave")
text = "Resume"

[node name="LoadLastSave" type="Button" parent="PauseMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../QuitToMenu")
text = "Reload Last Checkpoint"

[node name="QuitToMenu" type="Button" parent="PauseMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../LoadLastSave")
focus_neighbor_bottom = NodePath("../QuitToDesktop")
text = "Quit to Main Menu"

[node name="QuitToDesktop" type="Button" parent="PauseMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitToMenu")
text = "Quit to Desktop"

[node name="DeathMenu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -24.5
offset_right = 39.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2

[node name="YouDied" type="Label" parent="DeathMenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "You died!
Try again?"

[node name="HBoxContainer" type="HBoxContainer" parent="DeathMenu"]
layout_mode = 2

[node name="Reload" type="Button" parent="DeathMenu/HBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../Quit")
text = "Reload Last
Save
"

[node name="Quit" type="Button" parent="DeathMenu/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Reload")
text = "Quit to
Menu"

[node name="CharacterList" type="ItemList" parent="."]
process_mode = 4
visible = false
clip_contents = false
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
allow_reselect = true
auto_width = true
item_count = 3
item_0/text = "Test1"
item_1/text = "Test2"
item_2/text = "Test3"

[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/LoadLastSave" to="." method="_on_load_last_save_pressed"]
[connection signal="pressed" from="PauseMenu/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="PauseMenu/QuitToDesktop" to="." method="_on_quit_to_desktop_pressed"]
[connection signal="pressed" from="DeathMenu/HBoxContainer/Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="DeathMenu/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="item_activated" from="CharacterList" to="." method="_on_character_list_item_activated"]
[connection signal="item_clicked" from="CharacterList" to="." method="_on_character_list_item_clicked"]
